readme added and fixed problems in serial_port service

--- a/src/package.json
+++ b/src/package.json
@@ -1,10 +1,10 @@
 {
   "name": "src",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "start": "DEBUG=* node ./bin/www",
-    "debug": "DEBUG=* nodemon ./bin/www"
+    "debug": "DEBUG=* nodemon --inspect ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
