--- a/src/package.json
+++ b/src/package.json
@@ -3,8 +3,8 @@
   "version": "1.1.0",
   "private": true,
   "scripts": {
-    "start": "DEBUG=* node ./bin/www",
-    "debug": "DEBUG=* nodemon --inspect ./bin/www"
+    "start": "SERIAL_PORT=COM4 DEBUG=* node ./bin/www",
+    "debug": "SERIAL_PORT=TEST DEBUG=* nodemon --inspect ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
